﻿17.12.2016
- Initial release
...

[B]Version 1.0.1  (30.09.2018)[/B] by realvito
- fixed: Keine Anzeige der abgefragten Daten - da die Webseite keine Rückmeldung gibt
- fixed: Fehlermeldung, wenn Serie nicht gefunden wurde
- optimized: Anpassung der angezeigten InfoBox - Abmessungen und Inhalt